--- a/build
+++ b/build
@@ -8,7 +8,7 @@ elif [ "clean" = "$1" ]; then
 	rm -rf universe.dSYM
 
 elif [ "" = "$1" ]; then 
-	clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined game.c -o universe
+	clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined game.c -o universe -ferror-limit=4
 else 
 	echo "build: unknown target: $1"
 fi
