--- a/build
+++ b/build
@@ -1,8 +1,8 @@
 #!/bin/zsh
 
 if [ "release" = "$1" ]; then
-	clang -Ofast client.c -o client
-	clang -Ofast server.c -o server
+	clang -Ofast client.c -o client -lSDL2
+	# clang -Ofast server.c -o server
 
 elif [ "clean" = "$1" ]; then
 	rm -rf client
@@ -11,13 +11,12 @@ elif [ "clean" = "$1" ]; then
 	rm -rf server.dSYM
 
 elif [ "" = "$1" ]; then 
-	clang -g -O0 -fsanitize=address,undefined client.c -o client -lSDL2
-
+	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -Wno-reserved-id-macro -fsanitize=address,undefined client.c -o client -lSDL2
 	# clang -g -O0 -fsanitize=address,undefined server.c -o server
 	echo unimplemented.
 
 elif [ "client" = "$1" ]; then 
-	clang -g -O0 -Wall -fsanitize=address,undefined client.c -o client -lSDL2
+	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -fsanitize=address,undefined client.c -o client -lSDL2
 	
 elif [ "server" = "$1" ]; then 
 	# clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined server.c -o server
