--- a/build
+++ b/build
@@ -2,7 +2,7 @@
 
 if [ "release" = "$1" ]; then
 	clang -Ofast client.c -o client -lSDL2
-	# clang -Ofast server.c -o server
+	clang -Ofast server.c -o server
 
 elif [ "clean" = "$1" ]; then
 	rm -rf client
@@ -12,15 +12,13 @@ elif [ "clean" = "$1" ]; then
 
 elif [ "" = "$1" ]; then 
 	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -Wno-reserved-id-macro -fsanitize=address,undefined client.c -o client -lSDL2
-	# clang -g -O0 -fsanitize=address,undefined server.c -o server
-	echo unimplemented.
+	clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined server.c -o server
 
 elif [ "client" = "$1" ]; then 
 	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -fsanitize=address,undefined client.c -o client -lSDL2
 	
 elif [ "server" = "$1" ]; then 
-	# clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined server.c -o server
-	echo unimplemented.
+	clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined server.c -o server
 
 else 
 	echo "build: unknown target: $1"
