add networking to the game, now. it works very well. carried over from my 256 game. hope it works reliably.

--- a/build
+++ b/build
@@ -15,7 +15,7 @@ elif [ "" = "$1" ]; then
 	clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined server.c -o server
 
 elif [ "client" = "$1" ]; then 
-	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -fsanitize=address,undefined client.c -o client -lSDL2
+	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -Wno-reserved-id-macro -fsanitize=address,undefined client.c -o client -lSDL2
 	
 elif [ "server" = "$1" ]; then 
 	clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined server.c -o server
