--- a/build
+++ b/build
@@ -1,8 +1,8 @@
 #!/bin/zsh
 
 if [ "release" = "$1" ]; then
-	clang -Ofast client.c -o client -lSDL2
-	clang -Ofast server.c -o server
+	clang -Ofast source/client.c -o client -lSDL2
+	clang -Ofast source/server.c -o server
 
 elif [ "clean" = "$1" ]; then
 	rm -rf client
