--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #!/bin/zsh
 
 if [ "release" = "$1" ]; then
-	clang -Ofast -I /usr/local/include/ -L /usr/local/lib/ source/client.c -o client -lSDL2
+	clang -Ofast -I /opt/homebrew/include/ -L /opt/homebrew/lib/ source/client.c -o client -lSDL2 
 	clang -Ofast source/server.c -o server
 
 elif [ "clean" = "$1" ]; then
@@ -11,11 +11,11 @@ elif [ "clean" = "$1" ]; then
 	rm -rf server.dSYM
 
 elif [ "" = "$1" ]; then 
-	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -Wno-reserved-id-macro -fsanitize=address,undefined -I /usr/local/include/ -L /usr/local/lib/ source/client.c -o client -lSDL2
+	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -Wno-reserved-identifier -Wno-reserved-id-macro -Wno-deprecated-declarations -fsanitize=address,undefined -I /opt/homebrew/include/ -L /opt/homebrew/lib/ source/client.c -o client -lSDL2 -framework Opengl
 	clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined source/server.c -o server
 
 elif [ "client" = "$1" ]; then 
-	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -Wno-reserved-id-macro -fsanitize=address,undefined -I /usr/local/include/ -L /usr/local/lib/ source/client.c -o client -lSDL2 
+	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-padded -Wno-reserved-identifier -Wno-reserved-id-macro -Wno-deprecated-declarations -fsanitize=address,undefined -I /opt/homebrew/include/ -L /opt/homebrew/lib/ source/client.c -o client -lSDL2 -framework Opengl
 	
 elif [ "server" = "$1" ]; then 
 	clang -g -O0 -Weverything -Wno-poison-system-directories -fsanitize=address,undefined source/server.c -o server
@@ -23,3 +23,4 @@ elif [ "server" = "$1" ]; then
 else 
 	echo "build: unknown target: $1"
 fi
+
