--- a/glfw_version/build
+++ b/glfw_version/build
@@ -14,7 +14,7 @@ elif [ "clean" = "$1" ]; then
 
 elif [ "" = "$1" ]; then 
 
-	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-macro-redefined -Wno-declaration-after-statement -Wno-documentation -Wno-documentation-unknown-command -Wno-deprecated-declarations -fsanitize=address,undefined -I /opt/homebrew/include/ -L /opt/homebrew/lib/ client.c glad/glad.c -o run -lglfw3 -framework CoreVideo -framework OpenGL -framework IOKit -framework Cocoa -framework Carbon -ferror-limit=1
+	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-macro-redefined -Wno-declaration-after-statement -Wno-documentation -Wno-documentation-unknown-command -Wno-deprecated-declarations -fsanitize=address,undefined -I /opt/homebrew/Cellar/glfw/3.4/include/ -L /opt/homebrew/Cellar/glfw/3.4/lib/ -I /opt/homebrew/include/ -L /opt/homebrew/lib/ client.c glad/glad.c -o run -lglfw3 -framework CoreVideo -framework OpenGL -framework IOKit -framework Cocoa -framework Carbon -ferror-limit=1
 
 	clang -g -O0 -Weverything -Wno-poison-system-directories -Wno-declaration-after-statement -fsanitize=address,undefined server.c -o start
 
