--- a/2d_game/build
+++ b/2d_game/build
@@ -1,1 +1,1 @@
-clang c.c -Weverything -Wno-declaration-after-statement -o run -ferror-limit=1
+clang -g -O0 c.c -Weverything -Wno-declaration-after-statement -o run -ferror-limit=1 -fsanitize=address,undefined 
